fix: 加固探针长期运行与资源边界