@@ -3,6 +3,9 @@ package org.monitorclient.task;
 import com.alibaba.fastjson2.JSON;
 import lombok.extern.slf4j.Slf4j;
 import org.monitorclient.entity.BaseDetail;
+import org.monitorclient.collector.GpuCollector;
+import org.monitorclient.collector.SmartCollector;
+import org.monitorclient.collector.SystemdCollector;
 import org.monitorclient.entity.Capabilities;
 import org.monitorclient.entity.RuntimeDetail;
 import org.monitorclient.system.MetricCollector;
@@ -23,16 +26,19 @@ public class MonitorScheduler {
     private final NetUtils net;
     private final List<MetricCollector> collectors;
     private final ScheduledExecutorService scheduler;
+    private final int intervalSeconds;
+    private volatile long lastProgress = System.nanoTime();
+    private boolean metadataQueued;
     private final AtomicBoolean started = new AtomicBoolean(false);
 
     /**
-     * 构造监控调度器，使用 Java 21 Virtual Thread 作为调度线程。
+     * 构造监控调度器，使用 固定平台线程调度。
      *
      * @param monitor 监控采集工具
      * @param net 网络上报工具
      */
     public MonitorScheduler(MonitorUtils monitor, NetUtils net) {
-        this(monitor, net, List.of());
+        this(monitor, net, java.util.Collections.emptyList());
     }
 
     /**
@@ -43,11 +49,22 @@ public class MonitorScheduler {
      * @param collectors v1.3 可选采集器（process / gpu / smart / systemd），允许空列表表示无附加采集
      */
     public MonitorScheduler(MonitorUtils monitor, NetUtils net, List<MetricCollector> collectors) {
+        this(monitor, net, collectors, 10);
+    }
+
+    /** Configures a bounded reporting interval shared with optional snapshots. */
+    public MonitorScheduler(MonitorUtils monitor, NetUtils net, List<MetricCollector> collectors, int intervalSeconds) {
+        if (intervalSeconds < 1 || intervalSeconds > 60) throw new IllegalArgumentException("Invalid report interval");
+        this.intervalSeconds = intervalSeconds;
         this.monitor = monitor;
         this.net = net;
-        this.collectors = collectors == null ? List.of() : List.copyOf(collectors);
+        this.collectors = collectors == null ? java.util.Collections.emptyList() : java.util.Collections.unmodifiableList(new java.util.ArrayList<>(collectors));
         this.scheduler = Executors.newSingleThreadScheduledExecutor(
-                Thread.ofVirtual().name("monitor-scheduler", 1).factory());
+                runnable -> {
+                    Thread thread = new Thread(runnable, "monitor-scheduler");
+                    thread.setDaemon(true);
+                    return thread;
+                });
     }
 
     /**
@@ -57,8 +74,9 @@ public class MonitorScheduler {
         if (!started.compareAndSet(false, true)) {
             return;
         }
-        log.info("启动监控调度器，每10秒采集一次数据（v1.3 collectors={}）", collectors.size());
-        scheduler.scheduleAtFixedRate(this::collectAndReport, 10, 10, TimeUnit.SECONDS);
+        log.info("Starting monitoring every {} seconds with {} collectors", intervalSeconds, collectors.size());
+        lastProgress = System.nanoTime();
+        scheduler.scheduleWithFixedDelay(this::collectAndReport, 0, intervalSeconds, TimeUnit.SECONDS);
     }
 
     /**
@@ -69,9 +87,9 @@ public class MonitorScheduler {
             return;
         }
         log.info("正在关闭监控调度器...");
-        scheduler.shutdown();
+        scheduler.shutdownNow();
         try {
-            if (!scheduler.awaitTermination(5, TimeUnit.SECONDS)) {
+            if (!scheduler.awaitTermination(2, TimeUnit.SECONDS)) {
                 scheduler.shutdownNow();
             }
         } catch (InterruptedException e) {
@@ -96,11 +114,11 @@ public class MonitorScheduler {
         for (MetricCollector c : collectors) {
             Capabilities.Module module = c.describe();
             switch (c.name()) {
-                case "gpu" -> cap.setGpu(module);
-                case "smart" -> cap.setSmart(module);
-                case "systemd" -> cap.setSystemd(module);
-                case "process" -> cap.setProcess(module);
-                default -> log.warn("未知 MetricCollector name={}，已忽略", c.name());
+                case "gpu": cap.setGpu(module); break;
+                case "smart": cap.setSmart(module); break;
+                case "systemd": cap.setSystemd(module); break;
+                case "process": cap.setProcess(module); break;
+                default: log.warn("未知 MetricCollector name={}，已忽略", c.name());
             }
         }
         base.setCapabilitiesJson(JSON.toJSONString(cap));
@@ -113,25 +131,45 @@ public class MonitorScheduler {
      */
     private void collectAndReport() {
         try {
+            if (!metadataQueued) {
+                try {
+                    net.updateBaseDetails(describeWithCapabilities());
+                    metadataQueued = true;
+                } catch (Exception error) {
+                    log.warn("Static hardware collection failed; will retry: {}", error.getClass().getSimpleName());
+                }
+            }
             RuntimeDetail runtimeDetail = monitor.monitorRuntimeDetail();
             if (runtimeDetail == null) {
-                log.warn("运行时数据采集失败，发送心跳包维持在线状态");
+                log.debug("Runtime baseline unavailable; queueing a connectivity heartbeat");
                 net.sendHeartbeat();
                 return;
             }
             for (MetricCollector c : collectors) {
+                if (Thread.currentThread().isInterrupted()) return;
                 try {
                     c.enhance(runtimeDetail);
+                    if (c.describe().isEnabled() && c.describe().isAvailable()) {
+                        if (c instanceof GpuCollector) net.postGpuSnapshot(((GpuCollector) c).lastSnapshot());
+                        if (c instanceof SmartCollector) net.postSmartSnapshot(((SmartCollector) c).lastSnapshot());
+                        if (c instanceof SystemdCollector) net.postSystemdSnapshot(((SystemdCollector) c).snapshot());
+                    }
                 } catch (Exception e) {
                     log.warn("MetricCollector {} 执行异常：{}", c.name(), e.getMessage());
                 }
             }
             net.updateRuntimeDetails(runtimeDetail);
         } catch (Exception e) {
-            log.error("监控数据采集上报异常", e);
+            log.warn("Metric collection failed: {}", e.getClass().getSimpleName());
+        } finally {
+            lastProgress = System.nanoTime();
         }
     }
 
+    /** Exposes monotonic worker progress to the external-I/O stall watchdog. */
+    public long lastProgressNanos() { return lastProgress; }
+
+    /** Returns a defensive copy for collector contract tests. */
     List<MetricCollector> collectorsForTest() {
         return new ArrayList<>(collectors);
     }
